message AnnounceEnvelope {
    required bytes announce = 1;
    required bytes mac = 2;
}

message AnnounceMessage {
    required string version = 1;
    required uint32 port = 2;
    required bytes pubkey = 3;
}

message DiscoverEnvelope {
    required bool encrypted = 1;
    required bytes discover = 2;
    required bytes mac = 3;
}

message DiscoverMessage {
    required string version = 1;
    required uint32 port = 2;
    required bytes pubkey = 3;
}
